# apps/auth-service/src/controllers/auth-controller.ts
@@ -3,13 +3,16 @@ import {
   checkOtpRestrictions,
   sendOtp,
   trackOtpRequests,
+  validateLoginUser,
   validateRegistrationData,
   validateVerifyUser,
   verifyOtp,
 } from "../utils/auth.helper";
 import prisma from "@packages/libs/prisma";
 import bcrypt from "bcrypt";
+import jwt from "jsonwebtoken";
 import { ValidationError } from "@packages/error-handler";
+import { setCookie } from "../utils/cookies/setCookie";
 
 // Register a new user
 export const userRegistration = async (
@@ -58,7 +61,7 @@ export const verifyUser = async (
     });
 
     if (existingUser) {
-      return next(new ValidationError("User already exists with this email!"));
+      throw new ValidationError("User already exists with this email!");
     }
 
     await verifyOtp(email, otp, next);
@@ -74,6 +77,70 @@ export const verifyUser = async (
     return res.status(201).json({
       success: true,
       message: "User registered successfully!",
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// Login user
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, password } = req.body;
+    validateLoginUser(req.body);
+
+    const user = await prisma.users.findUnique({
+      where: { email },
+    });
+
+    if (!user) {
+      throw new ValidationError("User not found!");
+    }
+
+    const isPasswordValid = await bcrypt.compare(password, user.password!);
+    if (!isPasswordValid) {
+      throw new ValidationError("Invalid email or password!");
+    }
+
+    // Generate access and refresh token
+    const accessToken = jwt.sign(
+      {
+        id: user.id,
+        role: "user",
+      },
+      process.env.ACCESS_TOKEN_JWT_SECRET_KEY as string,
+      {
+        expiresIn: "30m",
+      }
+    );
+
+    const refreshToken = jwt.sign(
+      {
+        id: user.id,
+        role: "user",
+      },
+      process.env.REFRESH_TOKEN_JWT_SECRET_KEY as string,
+      {
+        expiresIn: "7d",
+      }
+    );
+
+    // Store the refresh & access token in the httpOnly secure cookies
+    setCookie(res, "access_Token", accessToken);
+    setCookie(res, "refresh_Token", refreshToken);
+
+    return res.status(200).json({
+      message: "User logged in successfully!",
+      success: true,
+      user: {
+        id: user.id,
+        name: user.name,
+        email: user.email,
+      },
     });
   } catch (error) {
     return next(error);
