# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,14 @@
 import { Router } from "express";
-import { userRegistration, verifyUser } from "../controllers/auth-controller";
+import {
+  loginUser,
+  userRegistration,
+  verifyUser,
+} from "../controllers/auth-controller";
 
 const router: Router = Router();
 
 router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser);
+router.post("/login-user", loginUser);
 
 export default router;
